tests/lean/type_context.lean.expected.out
type_context.lean:15:0: error: I failed
state:
⊢ true
type_context.lean:35:0: error: deep recursion was detected at 'expression replacer' (potential solution: increase stack space in your system)
type_context.lean:42:0: error: deep recursion was detected at 'expression replacer' (potential solution: increase stack space in your system)
type_context.lean:50:0: error: deep recursion was detected at 'expression replacer' (potential solution: increase stack space in your system)
theorem my_intro_test : ∀ (x : ℕ), x = x :=
λ (x : ℕ), eq.refl x
type_context.lean:170:0: error: failed to unify
state:
2 goals
⊢ true

⊢ Type ?
